--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
         "postcss": "^8.4.21",
         "tailwindcss": "^3.3.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "tailwind-scrollbar": "^3.0.0"
     }
 }
